--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -18,6 +18,10 @@ android {
     }
 
     buildTypes {
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -63,6 +67,13 @@ dependencies {
     implementation "com.fasterxml.jackson.core:jackson-annotations:$versions.jackson"
     implementation "com.fasterxml.jackson.core:jackson-databind:$versions.jackson"
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:$versions.jackson"
+
+    implementation 'com.sagar:coroutinespermission:2.0.2'
+
+    def coroutines = '1.3.2'
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines"
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 
     //progressBar error solve
     configurations.matching { it.name == '_internal_aapt2_binary' }.all { config ->
